tests/snapshots/cli__deleting_a_value.snap
---
source: tests/cli.rs
info:
  program: zenoh-cli
  args:
    - del
    - test/foo
  env:
    ZENOH_CONFIG: /var/folders/ww/jw_c93dn6w7c1b3gb78lm_500000gn/T/zenoht.tf7JdtpbQMo4/zenoh-conf.json5
---
success: true
exit_code: 0
----- stdout -----
ok

----- stderr -----
