tests/snapshots/cli__getting_a_non_existent_value.snap
---
source: tests/cli.rs
info:
  program: zenoh-cli
  args:
    - get
    - foo
---
success: true
exit_code: 0
----- stdout -----
foo: bar

----- stderr -----
