tests/snapshots/cli__getting_a_value.snap
---
source: tests/cli.rs
info:
  program: zenoh-cli
  args:
    - get
    - test_getting_a_value/foo
---
success: true
exit_code: 0
----- stdout -----
test_getting_a_value/foo: bar

----- stderr -----
