tests/snapshots/cli__getting_zid.snap
---
source: tests/cli.rs
info:
  program: zenoh-cli
  args:
    - zid
  env:
    ZENOH_CONFIG: /var/folders/ww/jw_c93dn6w7c1b3gb78lm_500000gn/T/zenoht.RRCwYVnA1D4s/zenoh-conf.json5
---
success: true
exit_code: 0
----- stdout -----
102030405060708090a0b0c0d0e0f10

----- stderr -----
