tests/snapshots/cli__putting_a_value.snap
---
source: tests/cli.rs
info:
  program: zenoh-cli
  args:
    - put
    - test/foo
    - bar
  env:
    ZENOH_CONFIG: /var/folders/ww/jw_c93dn6w7c1b3gb78lm_500000gn/T/zenoht.k6yhWRO3Sspw/zenoh-conf.json5
---
success: true
exit_code: 0
----- stdout -----
ok

----- stderr -----
