tests/snapshots/cli__subscribing_to_a_keyexpr.snap
---
source: tests/cli.rs
expression: "format!(\"----- stdout -----\\n{}\\n----- stderr -----\\n{}\", stdout_buf,\nstderr_buf,)"
---
----- stdout -----
test/foo: bar
test/baz: qux

----- stderr -----
